--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "bun-react-template",
+  "name": "@squoosh-lite/example",
   "version": "0.1.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "bun --hot src/index.tsx",
-    "start": "NODE_ENV=production bun src/index.tsx",
-    "build": "bun run build.ts"
+    "dev": "bun --hot server.ts",
+    "start": "NODE_ENV=production bun server.ts",
+    "build": "bun run build.ts --outdir public"
   },
   "dependencies": {
+    "@squoosh-lite/core": "workspace:*",
     "bun-plugin-tailwind": "^0.1.2",
     "react": "^19",
     "react-dom": "^19",
