--- a/apps/example/tsconfig.json
+++ b/apps/example/tsconfig.json
@@ -23,7 +23,8 @@
 
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@squoosh-lite/core/*": ["../../packages/core/src/*"]
     },
 
     // Some stricter flags (disabled by default)
@@ -31,6 +32,8 @@
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
   },
-
-  "exclude": ["dist", "node_modules"]
+  "exclude": ["dist", "node_modules"],
+  "references": [
+    { "path": "../../packages/core" }
+  ]
 }
