--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bun-react-template",
+  "name": "@squoosh-lite/example",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -9,6 +9,7 @@
     "build": "bun run build.ts"
   },
   "dependencies": {
+    "@squoosh-lite/core": "workspace:*",
     "bun-plugin-tailwind": "^0.1.2",
     "react": "^19",
     "react-dom": "^19",
