--- a/apps/example/tsconfig.json
+++ b/apps/example/tsconfig.json
@@ -32,5 +32,8 @@
     "noPropertyAccessFromIndexSignature": false
   },
 
+  "references": [
+    { "path": "../../packages/core" }
+  ],
   "exclude": ["dist", "node_modules"]
 }
