--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "@squoosh-lite/example",
+  "name": "@squoosh-kit/example",
   "version": "0.1.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "bun --hot src/index.tsx",
     "start": "NODE_ENV=production bun src/index.tsx",
-    "build": "bun run build.ts"
+    "build": "bun run build.ts",
+    "clean:local": "rm -rf dist bundle *.tsbuildinfo && echo 'Cleaned example app artifacts'"
   },
   "dependencies": {
-    "@squoosh-lite/core": "workspace:*",
+    "@squoosh-kit/core": "workspace:*",
     "bun-plugin-tailwind": "^0.1.2",
     "react": "^19",
     "react-dom": "^19",
