--- a/.releaserc.json
+++ b/.releaserc.json
@@ -25,10 +25,7 @@
     [
       "@semantic-release/git",
       {
-        "assets": [
-          "packages/core/CHANGELOG.md",
-          "packages/core/package.json"
-        ],
+        "assets": ["packages/core/CHANGELOG.md", "packages/core/package.json"],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
