--- a/apps/examples/tsconfig.json
+++ b/apps/examples/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     // Environment setup & latest features
-    "lib": ["ESNext"],
+    "lib": ["ESNext", "DOM"],
     "target": "ESNext",
     "module": "Preserve",
     "moduleDetection": "force",
@@ -31,8 +31,6 @@
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
   },
-  "references": [
-    { "path": "../../packages/core" }
-  ],
+  "references": [{ "path": "../../packages/core" }],
   "exclude": ["dist", "node_modules"]
 }
