--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "squoosh-kit",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "type": "module",
   "private": true,
-  "description": "Per-feature adapters around Squoosh codecs (Bun-first), worker/client runtimes.",
-  "author": "Bartosz Nowak <bnowak008@gmail.com>",
+  "description": "Per-feature adapters around Squoosh codecs, worker/client runtimes.",
+  "author": "Brent Nowak <bnowak008@gmail.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -45,7 +45,13 @@
     "format:check": "prettier --check .",
     "check-types": "tsc --noEmit",
     "clean": "bun run --filter \"@squoosh-kit/*\" clean:local && rm -rf node_modules .bun/install/cache bun.lockb",
-    "validate": "bun run check-types && bun run lint && bun run format:check && bun run test"
+    "validate": "bun run check-types && bun run lint && bun run format:check && bun run test",
+    "release": "bun run release:core --dry-run && bun run release:runtime --dry-run && bun run release:resize --dry-run && bun run release:webp --dry-run",
+    "release:core": "cd packages/core && bun publish",
+    "release:resize": "cd packages/resize && bun publish",
+    "release:webp": "cd packages/webp && bun publish",
+    "release:runtime": "cd packages/runtime && bun publish",
+    "release:publish": "bun run release:core && bun run release:runtime && bun run release:resize && bun run release:webp"
   },
   "devDependencies": {
     "@types/bun": "latest",
