--- a/packages/webp/package.json
+++ b/packages/webp/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@squoosh-kit/webp",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "type": "module",
-  "entry": "src/index.ts",
   "description": "WebP codec for squoosh-kit, providing encoding functionality.",
   "author": "Bartosz Nowak <bnowak008@gmail.com>",
   "license": "MIT",
@@ -33,7 +32,8 @@
   "scripts": {
     "build": "bun run scripts/copy-assets.ts && tsc && bun build --sourcemap --minify --format=esm --splitting --target=bun --outdir=dist src/index.ts src/webp.worker.ts",
     "clean:local": "rm -rf dist *.tsbuildinfo",
-    "prepack": "bun run build"
+    "prepack": "bun run build && bun test",
+    "test": "bun test"
   },
   "dependencies": {
     "@squoosh-kit/runtime": "workspace:*"
