--- a/packages/webp/package.json
+++ b/packages/webp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@squoosh-kit/webp",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "type": "module",
   "description": "WebP codec for squoosh-kit, providing encoding functionality.",
   "author": "Bartosz Nowak <bnowak008@gmail.com>",
@@ -15,6 +15,8 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
