--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,6 +6,7 @@
     "strict": true,
     "lib": ["ES2022", "DOM"],
     "declaration": true,
+    "declarationMap": true,
     "skipLibCheck": true,
     "allowImportingTsExtensions": true,
     "types": ["bun"],
