--- a/apps/example/tsconfig.json
+++ b/apps/example/tsconfig.json
@@ -23,7 +23,8 @@
 
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@squoosh-kit/*": ["../../packages/*/src"]
     },
 
     // Some stricter flags (disabled by default)
