--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@squoosh-kit/runtime",
-  "version": "0.0.4",
+  "version": "0.0.11",
   "type": "module",
   "description": "Core runtime logic for squoosh-kit, including the worker bridge and environment utilities.",
   "author": "Bartosz Nowak <bnowak008@gmail.com>",
@@ -20,7 +20,10 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+      "browser": "./dist/index.browser.mjs",
+      "bun": "./dist/index.bun.js",
+      "import": "./dist/index.node.mjs",
+      "require": "./dist/index.node.cjs"
     }
   },
   "files": [
@@ -29,8 +32,8 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "build": "tsc && bun build --sourcemap --minify --format=esm --splitting --target=browser --outdir=dist src/index.ts",
-    "clean:local": "rm -rf dist *.tsbuildinfo",
+    "build": "bun run build.ts",
+    "clean:local": "rm -rf dist node_modules .bun/install/cache bun.lockb bun.lock *.tsbuildinfo",
     "prepack": "bun run build && bun test",
     "test": "bun test"
   },
