--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -28,7 +28,8 @@
   },
   "files": [
     "dist/**",
-    "README.md"
+    "README.md",
+    "../../squoosh-kit-banner.webp"
   ],
   "sideEffects": false,
   "scripts": {
