--- a/packages/webp/package.json
+++ b/packages/webp/package.json
@@ -35,7 +35,8 @@
   },
   "files": [
     "dist/**",
-    "README.md"
+    "README.md",
+    "../../squoosh-kit-banner.webp"
   ],
   "sideEffects": false,
   "scripts": {
