--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@squoosh-kit/core",
-  "version": "0.0.19",
+  "version": "0.0.21",
   "type": "module",
   "description": "Per-feature adapters around Squoosh codecs, worker/client runtimes.",
   "author": "Bartosz Nowak <bnowak008@gmail.com>",
@@ -52,7 +52,7 @@
     "dist/**",
     "README.md",
     "LICENSE",
-    "../../squoosh-kit-banner.webp"
+    "squoosh-kit-banner.webp"
   ],
   "sideEffects": false,
   "scripts": {
