--- a/packages/runtime/package.json
+++ b/packages/runtime/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@squoosh-kit/runtime",
-  "version": "0.0.19",
+  "version": "0.0.21",
   "type": "module",
   "description": "Core runtime logic for squoosh-kit, including the worker bridge and environment utilities.",
   "author": "Bartosz Nowak <bnowak008@gmail.com>",
@@ -29,7 +29,7 @@
   "files": [
     "dist/**",
     "README.md",
-    "../../squoosh-kit-banner.webp"
+    "squoosh-kit-banner.webp"
   ],
   "sideEffects": false,
   "scripts": {
