--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,5 +14,6 @@
     "paths": {
       "@squoosh-kit/*": ["packages/*/src"]
     }
-  }
+  },
+  "exclude": ["node_modules", "dist", "wasm", ".squoosh-temp"]
 }
