--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
         run: bun install --frozen-lockfile --linker=hoisted
 
       - name: Build
-        run: bun run build
+        run: bun run ci:build
 
       - name: Test
         run: bun run test
